feat: notify missing metadata

--- a/templates/datario_description.html.jinja
+++ b/templates/datario_description.html.jinja
@@ -1,3 +1,15 @@
+<section
+    style="background-color: #C03D29; border-radius: 10px; width: 100%; text-align: center; color: #FFF0E9; padding: 20px 0;">
+    <p style="font-size: 1.414rem;">
+        DADOS PRIVADOS
+    </p>
+    <p style="font-size: 1.028rem;">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam sed mi at ex imperdiet aliquam. Nulla in elit
+        elit. Fusce dapibus lacinia velit vel vehicula. Morbi convallis scelerisque eros, a euismod orci mattis
+        pulvinar. Quisque quis pellentesque libero. In varius lacinia nunc a scelerisque. Mauris placerat sem nulla, sit
+        amet.
+    </p>
+</section>
 <div>
     <p style="font-size: 1.028rem;">
         {{ metadata.get('long_description') }}
